Fix: Remove horizontal scroll in How It Works steps
- Expanded right column to fit card width + padding
- Set step width to 100%
- Hid horizontal overflow in scroll container

--- a/sass/blocks/_how-it-works.scss
+++ b/sass/blocks/_how-it-works.scss
@@ -56,8 +56,8 @@
 	display: flex;
 	align-items: flex-start;
 	height: 100%;
-	flex: 0 0 590px;
-	max-width: 590px;
+	flex: 0 0 690px;
+	max-width: 690px;
 	margin-left: auto;
 	padding: $spacing-4xl 100px $spacing-4xl 0;
 	box-sizing: border-box;
@@ -70,6 +70,7 @@
 	width: 100%;
 	max-height: 100%;
 	overflow-y: auto;
+	overflow-x: hidden;
 	padding-right: $spacing-sm;
 	box-sizing: border-box;
 }
@@ -82,7 +83,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	min-height: 320px;
-	width: 590px;
+	width: 100%;
 	box-sizing: border-box;
 }
 
